--- a/style.css
+++ b/style.css
@@ -266,6 +266,59 @@
 }
 
 
+  .pai-promo{
+    display: flex;
+    border: 1px solid;
+    width: 350px;
+    height: 50px;
+    border-radius: 30px;
+    background-color: white;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+
+}
+
+  .pai-localizacao{
+    display: flex;
+    border: 1px solid;
+    width: 350px;
+    height: 50px;
+    border-radius: 30px;
+    background-color: white;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+
+}
+
+  .pai-sobre{
+    display: flex;
+    border: 1px solid;
+    width: 350px;
+    height: 50px;
+    border-radius: 30px;
+    background-color: white;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+
+}
+
+.pai-comunicacao{
+    display: flex;
+    border: 1px solid;
+    width: 350px;
+    height: 50px;
+    border-radius: 30px;
+    background-color: white;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+
+
+
+}
 
 }
 
@@ -280,6 +333,61 @@
     justify-content: center;
     align-items: center;
     gap: 30px;
+
+}
+
+
+ .pai-promo{
+    display: flex;
+    border: 1px solid;
+    width: 350px;
+    height: 50px;
+    border-radius: 30px;
+    background-color: white;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+
+}
+
+  .pai-localizacao{
+    display: flex;
+    border: 1px solid;
+    width: 350px;
+    height: 50px;
+    border-radius: 30px;
+    background-color: white;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+
+}
+
+  .pai-sobre{
+    display: flex;
+    border: 1px solid;
+    width: 350px;
+    height: 50px;
+    border-radius: 30px;
+    background-color: white;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+
+}
+
+.pai-comunicacao{
+    display: flex;
+    border: 1px solid;
+    width: 350px;
+    height: 50px;
+    border-radius: 30px;
+    background-color: white;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+
+
 
 }
 
