--- a/style.css
+++ b/style.css
@@ -54,13 +54,23 @@ a {
     display: flex;
     justify-content: center;
     margin-bottom: 15px;
-    cursor: pointer;   
+    cursor: pointer;  
+    
 
 }
 
+@keyframes piscar {
+  100% {
+    border-color: rgb(255, 255, 255);
+    box-shadow: 0 0 10px rgb(255, 255, 255);
+  }
+}
+
+
 .pai-cardapio{
     display: flex;
-    border: 1px solid;
+    border: 2px solid rgb(255, 255, 255);
+     animation: piscar 4s infinite; 
     width: 500px;
     height: 50px;
     border-radius: 30px;
@@ -68,6 +78,7 @@ a {
     justify-content: center;
     align-items: center;
     gap: 30px;
+   
 
 }
 
@@ -103,7 +114,8 @@ a {
 
 .pai-promo{
     display: flex;
-    border: 1px solid;
+    border: 2px solid rgb(255, 255, 255);
+     animation: piscar 4s infinite; 
     width: 500px;
     height: 50px;
     border-radius: 30px;
@@ -146,7 +158,8 @@ a {
 
 .pai-comunicacao{
     display: flex;
-    border: 1px solid;
+    border: 2px solid rgb(255, 255, 255);
+     animation: piscar 4s infinite; 
     width: 500px;
     height: 50px;
     border-radius: 30px;
@@ -188,7 +201,8 @@ a {
 
 .pai-localizacao{
     display: flex;
-    border: 1px solid;
+   border: 2px solid rgb(255, 255, 255);
+     animation: piscar 4s infinite; 
     width: 500px;
     height: 50px;
     border-radius: 30px;
@@ -232,7 +246,8 @@ a {
 
 .pai-sobre{
     display: flex;
-    border: 1px solid;
+    border: 2px solid rgb(255, 255, 255);
+     animation: piscar 4s infinite; 
     width: 500px;
     height: 50px;
     border-radius: 30px;
