--- a/style.css
+++ b/style.css
@@ -60,6 +60,14 @@ a {
 }
 
 @keyframes piscar {
+  0% {
+    border-color: rgb(255, 255, 255);
+    box-shadow: 0 0 5px rgb(255, 255, 255);
+  }
+  50% {
+    border-color: transparent;
+    box-shadow: none;
+  }
   100% {
     border-color: rgb(255, 255, 255);
     box-shadow: 0 0 10px rgb(255, 255, 255);
@@ -70,7 +78,7 @@ a {
 .pai-cardapio{
     display: flex;
     border: 2px solid rgb(255, 255, 255);
-     animation: piscar 4s infinite; 
+    animation: piscar 4s infinite;
     width: 500px;
     height: 50px;
     border-radius: 30px;
@@ -78,7 +86,7 @@ a {
     justify-content: center;
     align-items: center;
     gap: 30px;
-   
+    
 
 }
 
@@ -115,7 +123,7 @@ a {
 .pai-promo{
     display: flex;
     border: 2px solid rgb(255, 255, 255);
-     animation: piscar 4s infinite; 
+    animation: piscar 4s infinite;
     width: 500px;
     height: 50px;
     border-radius: 30px;
@@ -159,7 +167,7 @@ a {
 .pai-comunicacao{
     display: flex;
     border: 2px solid rgb(255, 255, 255);
-     animation: piscar 4s infinite; 
+    animation: piscar 4s infinite;
     width: 500px;
     height: 50px;
     border-radius: 30px;
@@ -201,8 +209,8 @@ a {
 
 .pai-localizacao{
     display: flex;
-   border: 2px solid rgb(255, 255, 255);
-     animation: piscar 4s infinite; 
+    border: 2px solid rgb(255, 255, 255);
+    animation: piscar 4s infinite;
     width: 500px;
     height: 50px;
     border-radius: 30px;
@@ -247,7 +255,7 @@ a {
 .pai-sobre{
     display: flex;
     border: 2px solid rgb(255, 255, 255);
-     animation: piscar 4s infinite; 
+    animation: piscar 4s infinite;
     width: 500px;
     height: 50px;
     border-radius: 30px;
