--- a/promo/promo.css
+++ b/promo/promo.css
@@ -1,60 +1,49 @@
-*{
-    margin: 0;
-    padding: 0;
-    background-color: #c0c0c0;
+* {
+  margin: 0;
+  padding: 0;
+  background-color: #c0c0c0;
 }
 
-
-
-
-/* Swiper base */
+/* Swiper NÃO pode ter padding */
 .swiper {
   width: 100%;
-  padding: 20px 0;
+  padding: 0;
 }
 
-/* Wrapper */
+/* Wrapper SEM padding */
 .swiper-wrapper {
-  padding-left: 15px;
+  padding: 0;
 }
 
-/* Cada slide (ESSENCIAL) */
+/* Slide NÃO pode ter margem */
 .swiper-slide {
   width: 280px;
-  margin-right: 30px;
-}
-
-/* Card */
-.card {
-  
-  min-height: 350px;
-  border: 1px solid #ddd;
-  border-radius: 8px;
-  padding: 16px;
   display: flex;
-  flex-direction: column;
   justify-content: center;
+}
+
+/* Card circular */
+.card {
+  width: 300px;
+  height: 300px;
+  border-radius: 50%;
+  
+  border: 2px solid #ddd;
+
+  display: flex;
   align-items: center;
+  justify-content: center;
+  font-size: 24px;
 }
 
-/* Título */
-.card-title {
-  text-align: center;
-  margin-bottom: 10px;
+.cards1{
+    margin-top: 120px;
 }
 
-.imglogopai{
-    border-radius: 50%;
-}
-
-.divpai1{
+.promo-dia{
     display: flex;
     justify-content: center;
-    gap: 20px;
-}
-
-.titlepai{
-    margin-top: 20px;
+    margin-top: 50px;
 }
 
 .footer-p{
@@ -69,7 +58,7 @@
 footer{
     margin-top: 50px;
     background-color: #000000;
-    height: 80px;
+    height: 180px;
     display: flex;
     justify-content: center;
     align-items: center;
