--- a/promo/promo.css
+++ b/promo/promo.css
@@ -69,26 +69,18 @@ footer{
     text-align: center;
 }
 
+.swiper-slide {
+  width: 280px; /* padrão */
+}
+
 @media (max-width: 768px) {
   .swiper-slide {
-    width: 200px;
-  }
-
-  .card {
     width: 220px;
-    height: 220px;
-    font-size: 18px;
   }
 }
 
 @media (max-width: 480px) {
   .swiper-slide {
     width: 150px;
-  }
-
-  .card {
-    width: 200px;
-    height: 200px;
-    font-size: 18px;
   }
 }
