--- a/promo/promo.css
+++ b/promo/promo.css
@@ -74,13 +74,16 @@ footer{
 }
 
 @media (max-width: 768px) {
-  .swiper-slide {
+  .card {
     width: 220px;
+    height: 220px;
+    font-size: 18px;
   }
 }
-
 @media (max-width: 480px) {
-  .swiper-slide {
-    width: 150px;
+  .card {
+    width: 200px;
+    height: 200px;
+    font-size: 16px;
   }
 }
