--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 *{
     margin: 0;
     padding: 0;
-    background-color: #c0c0c0;
+    background-color: #ffffff;
 }
 
 a {
@@ -61,23 +61,23 @@ a {
 
 @keyframes piscar {
   0% {
-    border-color: rgb(255, 255, 255);
-    box-shadow: 0 0 5px rgb(255, 255, 255);
+    border-color: rgb(0, 0, 0);
+    box-shadow: 0 0 5px rgb(0, 0, 0);
   }
   50% {
     border-color: transparent;
     box-shadow: none;
   }
   100% {
-    border-color: rgb(255, 255, 255);
-    box-shadow: 0 0 10px rgb(255, 255, 255);
+    border-color: rgb(0, 0, 0);
+    box-shadow: 0 0 10px rgb(0, 0, 0);
   }
 }
 
 
 .pai-cardapio{
     display: flex;
-    border: 2px solid rgb(255, 255, 255);
+    border: 2px solid rgb(0, 0, 0);
     animation: piscar 6s infinite;
     width: 500px;
     height: 50px;
@@ -122,7 +122,7 @@ a {
 
 .pai-promo{
     display: flex;
-    border: 2px solid rgb(255, 255, 255);
+    border: 2px solid rgb(0, 0, 0);
     animation: piscar 6s infinite;
     width: 500px;
     height: 50px;
@@ -166,7 +166,7 @@ a {
 
 .pai-comunicacao{
     display: flex;
-    border: 2px solid rgb(255, 255, 255);
+    border: 2px solid rgb(0, 0, 0);
     animation: piscar 6s infinite;
     width: 500px;
     height: 50px;
@@ -209,7 +209,7 @@ a {
 
 .pai-localizacao{
     display: flex;
-    border: 2px solid rgb(255, 255, 255);
+    border: 2px solid rgb(0, 0, 0);
     animation: piscar 6s infinite;
     width: 500px;
     height: 50px;
@@ -254,7 +254,7 @@ a {
 
 .pai-sobre{
     display: flex;
-    border: 2px solid rgb(255, 255, 255);
+    border: 2px solid rgb(0, 0, 0);
     animation: piscar 6s infinite;
     width: 500px;
     height: 50px;
