--- a/faleconosco/fale.css
+++ b/faleconosco/fale.css
@@ -9,7 +9,7 @@
 
 .zap{
     border: 1px solid black;
-    width: 350px;
+    width: 370px;
     height: 40px;
     margin-bottom: 30px;
 }
@@ -21,7 +21,7 @@
 
 .instagram{
     border: 1px solid black;
-    width: 350px;
+    width: 370px;
     height: 40px;
     margin-bottom: 30px;
 }
@@ -33,7 +33,7 @@
 
 .facebook{
     border: 1px solid black;
-    width: 350px;
+    width: 370px;
     height: 40px;
     margin-bottom: 30px;
 }
@@ -45,11 +45,15 @@
 
 .email{
     border: 1px solid black;
-    width: 350px;
+    width: 370px;
     height: 40px;
 }
 
 .emailf{
     display: flex;
     gap: 30px;
+}
+
+.iconemail{
+    margin-left: 10px;
 }
