--- a/cardapio/cardapio.css
+++ b/cardapio/cardapio.css
@@ -57,6 +57,27 @@
     margin-top: 20px;
 }
 
+.p-preço{
+    margin-top: 20px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 .footer-p{
     color: white;
     background-color: black !important;
@@ -79,3 +100,4 @@ footer{
     background-color: black !important;
     text-align: center;
 }
+
