--- a/promo/promo.css
+++ b/promo/promo.css
@@ -1,7 +1,7 @@
 * {
   margin: 0;
   padding: 0;
-  background-color: #c0c0c0;
+  background-color: #ffffff;
 }
 
 /* Swiper NÃO pode ter padding */
@@ -28,7 +28,7 @@
   height: 300px;
   border-radius: 50%;
   
-  border: 2px solid #ddd;
+  border: 2px solid #000000;
 
   display: flex;
   align-items: center;
